--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Terraform
 
 # Controls when the action will run. 
 on:
@@ -19,18 +19,29 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    name: 'Terraform'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Install terraform
-        run: |
-          wget https://releases.hashicorp.com/terraform/0.14.7/terraform_0.14.7_linux_amd64.zip
-          unzip terraform_0.14.7_linux_amd64.zip
-          chmod +x terraform
-          sudo mv terraform /bin
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+
+#     - name: Install terraform
+#         run: |
+#           wget https://releases.hashicorp.com/terraform/0.14.7/terraform_0.14.7_linux_amd64.zip
+#           unzip terraform_0.14.7_linux_amd64.zip
+#           chmod +x terraform
+#           sudo mv terraform /bin
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate
+
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
       
       - name: Terraform init
         run: terraform init
