--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,27 +24,25 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - name: Setup Terraform
+      
+      - name: Install Terraform
         uses: hashicorp/setup-terraform@v1
-
-#     - name: Install terraform
-#         run: |
-#           wget https://releases.hashicorp.com/terraform/0.14.7/terraform_0.14.7_linux_amd64.zip
-#           unzip terraform_0.14.7_linux_amd64.zip
-#           chmod +x terraform
-#           sudo mv terraform /bin
-
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
-
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
+        with:
+          terraform_version: 0.14.7
       
       - name: Terraform init
         run: terraform init
+        
+      - name: Terraform fmt
+        run: terraform fmt
+        
+      - name: Terraform validate
+        run: terraform validate
       
       - name: Terraform plan
-        run: terraform plan
+        run: |
+          echo $AWS_ACCESS_KEY_ID
+          terraform plan
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
