--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,6 +52,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
       
       - name: comment pull request    
         uses: actions/github-script@0.9.0
